화정고 수강신청 앱 1.0

--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_login.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_login.xml
@@ -73,6 +73,7 @@
                     android:layout_gravity = "center|center_horizontal"
                     android:layout_margin="1dp"
                     android:maxEms="20"
+                    android:imeOptions="actionGo"
                     android:singleLine="true"
                     android:password="true"
                     android:id="@+id/password"
