--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_apply_table.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_apply_table.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/background"
     tools:context="parkjunu.apply.com.hwajunghighschoolapply.ApplyTable">
     <LinearLayout
         android:layout_width="match_parent"
