--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_splash.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_splash.xml
@@ -4,18 +4,21 @@
     android:id="@+id/activity_splash"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:gravity="center"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/colorPrimaryDark"
     tools:context="parkjunu.apply.com.hwajunghighschoolapply.Splash">
+
     <ImageView
         android:layout_width="143dp"
         android:layout_height="100dp"
         android:layout_marginBottom="25dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/hwajung"
         android:id="@+id/logo"
         />
+
+
 </RelativeLayout>
