--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/list_view_apply_list_layout.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/list_view_apply_list_layout.xml
@@ -6,7 +6,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/column1"
-        android:textSize="8dp"
+        android:padding="4dp"
+        android:textSize="16dp"
         android:layout_margin="4dp"
         />
 </LinearLayout>
