--- a/Documents/HwajungHighSchoolApply/app/src/main/res/values/colors.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#accfcc</color>
     <color name="colorPrimaryDark">#ac325c</color>
     <color name="colorAccent">#FF4081</color>
     <color name="background">#accfcc</color>
