--- a/Documents/HwajungHighSchoolApply/app/src/main/res/values/styles.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/values/styles.xml
@@ -8,4 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="CheckBox" >
+        <item name="colorAccent">@color/deep_light</item>
+    </style>
 </resources>
