화정고 수강신청 앱 1.0

--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_apply_table.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_apply_table.xml
@@ -33,6 +33,7 @@
         </LinearLayout>
         <TableLayout
             android:id="@+id/table"
+            android:background="@color/background"
             android:stretchColumns="*"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
