--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_login.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
                     android:layout_gravity = "center|center_horizontal"
                     android:layout_margin="1dp"
                     android:maxEms="20"
-                    android:singleLine="true"
+                    android:maxLines="1"
                     android:id="@+id/user_id"
                     />
 
@@ -80,8 +80,8 @@
                     android:layout_margin="1dp"
                     android:maxEms="20"
                     android:imeOptions="actionGo"
-                    android:singleLine="true"
-                    android:password="true"
+                    android:maxLines="1"
+                    android:inputType="textPassword"
                     android:id="@+id/password"
                     />
 
