--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/grid_item.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/grid_item.xml
@@ -5,8 +5,8 @@
     <ImageView
         android:id="@+id/grid_image"
         android:layout_gravity="center"
-        android:layout_width="256px"
-        android:layout_height="256px" />
+        android:layout_width="96dp"
+        android:layout_height="96dp" />
     <TextView
         android:id="@+id/grid_text"
         android:layout_width="wrap_content"
