--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_after_apply_history.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_after_apply_history.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_apply_history"
+    android:id="@+id/activity_after_apply_history"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,8 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/white"
-    tools:context="parkjunu.apply.com.hwajunghighschoolapply.ApplyHistory">
-
+    tools:context="parkjunu.apply.com.hwajunghighschoolapply.AfterApplyHistory">
     <ListView
         android:id="@+id/list_view_apply_history"
         android:layout_width="match_parent"
