--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_login.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_login.xml
@@ -3,15 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="#FFFFFF"
     xmlns:flatui="http://schemas.android.com/apk/res-auto"
     xmlns:app = "http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
     tools:context="parkjunu.apply.com.hwajunghighschoolapply.LoginActivity">
 
     <FrameLayout
@@ -53,12 +51,15 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:layout_weight="0.5">
 
-                <com.cengalabs.flatui.views.FlatEditText
-                    flatui:fl_fieldStyle = "fl_flat"
-                    flatui:theme="@array/sand"
-                    android:backgroundTint="@color/white"
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    app:met_floatingLabel="highlight"
+                    app:met_singleLineEllipsis="true"
+                    app:met_primaryColor="@color/colorAccent"
+                    app:met_baseColor="@color/colorPrimaryDark"
                     android:hint="아이디"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
@@ -69,10 +70,11 @@
                     android:id="@+id/user_id"
                     />
 
-                <com.cengalabs.flatui.views.FlatEditText
-                    flatui:fl_fieldStyle = "fl_flat"
-                    flatui:theme="@array/sand"
-                    android:backgroundTint="@color/white"
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    app:met_floatingLabel="highlight"
+                    app:met_singleLineEllipsis="true"
+                    app:met_primaryColor="@color/colorAccent"
+                    app:met_baseColor="@color/colorPrimaryDark"
                     android:hint="비밀번호"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
@@ -85,10 +87,11 @@
                     android:id="@+id/password"
                     />
 
-                <CheckBox
+                <com.cengalabs.flatui.views.FlatCheckBox
                     android:text="로그인 정보 저장"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    flatui:fl_size="10dp"
                     android:textColorHint="@color/deep_light"
                     android:theme="@style/CheckBox"
                     android:id="@+id/save_login" />
@@ -105,7 +108,7 @@
                         android:text="로그인"
                         android:layout_gravity="center"
                         app:shadowHeight="0dp"
-                        app:cornerRadius="2dp"
+                        app:cornerRadius="8dp"
                         app:buttonColor="@color/deep_light"
                         android:layout_margin="4dp"
                         android:id="@+id/submit"
@@ -116,7 +119,7 @@
                         android:layout_height="wrap_content"
                         android:text="비번 찾기"
                         app:shadowHeight="0dp"
-                        app:cornerRadius="2dp"
+                        app:cornerRadius="8dp"
                         app:buttonColor="@color/deep_light"
                         android:layout_margin="4dp"
                         android:layout_gravity="center"
@@ -142,7 +145,7 @@
             android:layout_weight="1">
 
             <TextView
-                android:text="Developed By 화정고 박준우"
+                android:text="Developed By 화정고 CPU"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="bottom|center"
