--- a/Documents/HwajungHighSchoolApply/app/src/main/res/values/styles.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/values/styles.xml
@@ -8,6 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppThemeActionBar" parent="Theme.AppCompat.Light">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
     <style name="CheckBox" >
         <item name="colorAccent">@color/deep_light</item>
     </style>
