--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_apply_history_table.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_apply_history_table.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_apply_history_table"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,13 +25,14 @@
                 android:text=""/>
 
            <com.cengalabs.flatui.views.FlatButton
+               app:buttonColor="@color/background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="저장하기"/>
 
         </LinearLayout>
 
-        <HorizontalScrollView
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TableLayout
@@ -42,6 +44,6 @@
                 android:layout_height="match_parent"
                 >
             </TableLayout>
-        </HorizontalScrollView>
+        </ScrollView>
     </LinearLayout>
 </RelativeLayout>
