--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_apply_table.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_apply_table.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_apply_table"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,36 +10,70 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/background"
+    android:background="@color/white"
     tools:context="parkjunu.apply.com.hwajunghighschoolapply.ApplyTable">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="right">
-            <TextView
-                android:layout_width="wrap_content"
+            android:layout_margin="8dp"
+            card_view:cardCornerRadius="6dp"
+            android:background="@color/cardBackground">
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""/>
+                android:gravity="right">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""/>
 
-            <com.cengalabs.flatui.views.FlatButton
-                android:id="@+id/submit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="저장하기"/>
+                <info.hoang8f.widget.FButton
+                    android:id="@+id/refresh"
+                    app:buttonColor="@color/background"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="새로고침"/>
 
-        </LinearLayout>
-        <TableLayout
-            android:id="@+id/table"
-            android:background="@color/background"
-            android:stretchColumns="*"
+                <info.hoang8f.widget.FButton
+                    android:id="@+id/submit"
+                    app:buttonColor="@color/background"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="저장하기"/>
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_margin="8dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/cardBackground"
+            card_view:cardCornerRadius="6dp"
+            android:layout_gravity="center"
             >
-        </TableLayout>
+            <ScrollView
+                android:layout_margin="4dp"
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:layout_height="match_parent">
+                <TableLayout
+                    android:id="@+id/table"
+                    android:color ="#d1dbdd"
+                    android:layout_gravity="center"
+                    android:stretchColumns="*"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    >
+                </TableLayout>
+
+            </ScrollView>
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 </RelativeLayout>
