--- a/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_apply_history_table.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/res/layout/activity_apply_history_table.xml
@@ -2,48 +2,69 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_apply_history_table"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/white"
     tools:context="parkjunu.apply.com.hwajunghighschoolapply.ApplyHistoryTable">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <LinearLayout
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="right">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""/>
-
-           <com.cengalabs.flatui.views.FlatButton
-               app:buttonColor="@color/background"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="저장하기"/>
-
-        </LinearLayout>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TableLayout
-                android:padding="4dp"
-                android:id="@+id/table"
-                android:stretchColumns="*"
-                android:color ="#d1dbdd"
+            android:background="@color/cardBackground"
+            android:layout_margin="8dp"
+            card_view:cardCornerRadius="6dp"
+            >
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
-            </TableLayout>
-        </ScrollView>
+                android:layout_height="wrap_content"
+                android:gravity="right">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""/>
+
+                <info.hoang8f.widget.FButton
+                    android:layout_margin="4dp"
+                    android:id="@+id/refresh"
+                    app:buttonColor="@color/background"
+                    app:shadowHeight="0dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="새로 고침"
+                    />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/cardBackground"
+            android:layout_margin="8dp"
+            card_view:cardCornerRadius="6dp"
+            android:layout_gravity="center"
+            >
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <TableLayout
+                    android:padding="4dp"
+                    android:id="@+id/table"
+                    android:stretchColumns="*"
+                    android:color ="#d1dbdd"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    >
+                </TableLayout>
+            </ScrollView>
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 </RelativeLayout>
